--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -186,7 +186,11 @@
 
 人体这个房间要维持相对恒定的温度，维持体温就需要热量，热量由气、血、津液带来，其中血和津液相当于上面例子中的水，气相当于水蒸汽和被加热后房间空气。气、血、津液的热量由元气给予，元气相当于上面例子中的炉火，是原动力。元气由精产生，精相当于上面例子中的液化气，是人体的能源。神则类似控制器，起到管理调节作用。
 
-在中医常用术语里，阴一般指固液气三态的**物质**，特别是津液、血这类液体，阳一般指元气**能量**。如果详细讲，则要具体情况具体分析，不同情况下，阴阳所指不同，比如有时阴也指阴精。
+在中医常用术语里，阴一般指固液气三态的**物质**，特别是津液、血这类液体，阳一般指元气**能量**。如果详细讲，则要具体情况具体分析，不同情况下，阴阳所指不同，比如有时阴也指阴精，阳也能指能量充足的气态物质。
+
+> “**阳**”，指物质的**能量**。阳可以把物质转化为精微之气，以促进万物的生长；转化为动力，以促进人体的生命活动，所以称为“阳化气”；“**阴**”，指**有形可见的物质**（如精、血、津液等），它可以充养形体组织，有促进万物成长壮大的作用，所以又称为“阴成形”。
+>
+> 《黄帝内经讲解-阴阳的性质和作用》
 
 阴虚主要指血、津液的量低于正常范围，对应暖气里的水量不足。水量不足而火量不变的话，容易烧干，也就是阴虚火旺。这种情况会有一系列表现可供判断，比如从舌像上看，舌色暗红呈紫色等等。更多诊断方法可参考教材《概论-诊断》内容。调理方法是加水补阴了。
 
@@ -194,7 +198,7 @@
 
 如果阴阳都不足，对应暖气的水和火的量都不足，则需阴阳双补。
 
-几种要素中，气与血是营养身体的直接因素。血是营养身体器官的特别重要的液态物质。气是推动人体各项功能的直接动力。这个道理就像蒸汽机，火作用于水而产生蒸汽，火虽然是原动力，但是最终起直接作用的是蒸汽。人体元气虽然是原动力，但是对组织器官起直接作用的还是气态物质。所以元气能量之阳与物质之阴适度配合产生足够的气血，进而形成适宜的体内环境。
+几种要素中，气与血是营养身体的直接因素。血是营养身体器官的特别重要的液态物质。气是推动人体各项功能的直接动力。元气与气态物质的关系就像蒸汽机，火作用于水而产生蒸汽，火虽然是原动力，但是最终起直接作用的是蒸汽。人体元气虽然是原动力，但是对组织器官起直接作用的还是气态物质。所以元气能量之阳与物质之阴适度配合产生足够的气血，进而形成适宜的体内环境。
 
 由此可知，气、血、阴、阳的不足是中医虚证的主要原因，其中气、血虚为轻，阴、阳虚为重，对应则有补气、补血、补阴、补阳的方剂。
 
