--- a/ok/fjx/fjx01-0.6.0.0.0.md
+++ b/ok/fjx/fjx01-0.6.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔煎服法〕原方杵为散，每服六钱，鲜苇根汤煎，香气大出，即取服，勿过煮。肺药取轻清，过煮则味厚而入中焦矣。病重者约二时一服，日三服，夜一服；轻者三时一服，日二服，夜一服；病不解者，作再服。（芦根鲜者加倍用，水煎服，不宜久煎，以不超过20分钟为宜）。
 
-〔讲解〕本方主治风热温邪在卫分，全身发热重，恶寒轻，为辛凉解表之方，既能外散在卫之风热，又能内清在肺之热毒。温病初起，邪在卫分，卫气被郁，故发热，微恶风寒。温为阳邪，易伤津液，故口渴；温邪上受，首先犯肺，肺气不宣，故咳嗽；喉为肺户，风热袭肺，故咽喉红肿疼痛。挟热上扰则头痛。温热伤津故舌边尖红。风热在表，故苔薄白而脉浮数。
+〔讲解〕本方主治风热温邪在卫分，全身发热重，恶寒轻，为辛凉解表之方，既能外散在卫之风热，又能内清在肺之热毒。温病初起，邪在卫分，卫气被郁，故发热，微恶风寒。温为阳邪，易伤津液，故口渴；温邪上受，首先犯肺，肺气不宣，故咳嗽；喉为肺户，风热袭肺，故咽喉红肿疼痛。阳热上扰则头痛。温热伤津故舌边尖红。风热在表，故苔薄白而脉浮数。
 
 方中银花善于清热解毒，连翘能透全身躯壳之热毒，两药合用，辛凉透表，清热解毒，且芳香辟秽，又因用量最重，故为方中君药，又以名方。臣以荆芥、薄荷、豆豉辛散表邪，透热外出，以除寒热头痛。其中荆芥虽具有辛温之性，但温而不燥，且与辛凉诸药配伍，温性被制，并可防寒凉遏邪，且增强解表功效。豆豉酿制有两法，一偏性温，一偏性寒，本方所用豆豉系属辛温，既用其解表散邪之力，又可除方中凉遏之弊。牛蒡子、桔梗、甘草解毒利咽、宣肺祛痰，以治咽痛、咳嗽，且牛蒡子尤可辛凉透表，助银翘以清风热；芦根、竹叶甘凉轻清，清热生津、除烦止渴为佐，且竹叶还可利尿，使热从下出。甘草调和诸药兼为使药。综观全方，大体可分三组药物，一为疏风解表药，一为清热解毒药，一为利咽生津药，结构合理，疗效确实，所以久用不衰。全方有疏散风热、清热解毒之效。
 
