--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -1,8 +1,18 @@
 ## 3.1 人体基本概念及运转机制
 
-通过前面天地自然章节，我们知道自然界就像一个大温室花园，而人体就像一个小的温室花园。这个小花园同样需要一些要素来维持平衡，让人体内的各种生命正常生存，进而才能完成运动、思维、感受、表达等人体功能。
+前面天地自然章节提到自然界有两大平衡需要重点关注，即日地平衡和天地平衡。日地平衡是能量与物质的平衡，即太阳能量与自然界物质形成的适度配合状态。天地平衡是气态物质与固液态物质的适度配合状态。
 
-中医对人体的这类要素有专用的名词，所以我们要先对相关名词做一个简单的介绍。
+而人体需要维持相对恒定的体温，形成适宜的体内环境，也有这两类平衡，其原理与自然界很相似，所以称人体是一个小自然。
+
+第一章阴阳平衡章节提到阴阳是符号，需要落实到具体事物才有意义。人体的阴与阳，大多情况下是指物质与能量。人体阴阳平衡就是人体的能量与物质像自然界的阳光与水土一样，处于一种合适的配合状态。
+
+> “**阳**”，指物质的**能量**。阳可以把物质转化为精微之气，以促进万物的生长；转化为动力，以促进人体的生命活动，所以称为“阳化气”；“**阴**”，指**有形可见的物质**（如精、血、津液等），它可以充养形体组织，有促进万物成长壮大的作用，所以又称为“阴成形”。
+>
+> 《黄帝内经讲解-阴阳的性质和作用》
+
+又因阴阳术语在中医学中广泛应用，所以阴阳可指内外部位、功能低沉或亢奋、干扰平衡的因素性质等等，比较复杂，需要具体情况具体分析。
+
+在进一步介绍人体机制之前，因中医有一些专用名词，初学者不一定了解，所以需要先对这些名称做一个初步介绍。
 
 ### 1、基本概念
 
@@ -58,7 +68,7 @@
 
 人体的固、液态物质为地气，包括形、津液、血等。人体中的气态物质为天气，包含自然空气以及血、津液蒸化而成的气态物质等。
 
-津液、血由液态转化为气态物质，就成为天气的一部分。空气溶于津液、血中就成为地气的一部分。所以人体中也存在类似自然界天气、地气相交的现象。
+津液、血由液态转化为气态物质，就成为天气的一部分。空气溶于津液、血中就成为地气的一部分。这就是人体中的天地平衡。
 
 人体中全身各处都有天气、地气存在，但因两者特性的不同，可以分出多种天地关系。天气倾向于向外、向上，地气倾向于向内、向下，从此角度对人体进行划分的话，人体的肌表、四肢等形体属天，五脏六腑属地；上窍属天，下窍属地；上半身属天，下半身属地；三焦中的上焦属天，中下焦属地；脏腑对比的话，腑属天，脏属地。
 
@@ -162,7 +172,7 @@
 
 #### 2.1基本原理：
 
-人体这几大要素是如何配合形成适宜的体内环境呢？这个问题是中医的核心问题，也是学习中医的几大难点之一。
+人体的要素包括精、神、气、血、津液、元气等，这些要素是如何配合形成适宜的体内环境呢？这个问题是中医的核心问题，也是学习中医的几大难点之一。
 
 人体象一个温室花园，其保持温度的原理和北方家庭用暖气片进行烧水取暖有相似之处，我们将两者进行对比讲解。
 
@@ -186,13 +196,7 @@
 
 人体这个房间要维持相对恒定的温度，维持体温就需要热量，热量由气、血、津液带来，其中血和津液相当于上面例子中的水，气相当于水蒸汽和被加热后房间空气。气、血、津液的热量由元气给予，元气相当于上面例子中的炉火，是原动力。元气由精产生，精相当于上面例子中的液化气，是人体的能源。神则类似控制器，起到管理调节作用。
 
-在中医常用术语里，阴一般指固液气三态的**物质**，特别是津液、血这类液体，阳一般指元气**能量**。如果详细讲，则要具体情况具体分析，不同情况下，阴阳所指不同，比如有时阴也指阴精，阳也能指能量充足的气态物质。
-
-> “**阳**”，指物质的**能量**。阳可以把物质转化为精微之气，以促进万物的生长；转化为动力，以促进人体的生命活动，所以称为“阳化气”；“**阴**”，指**有形可见的物质**（如精、血、津液等），它可以充养形体组织，有促进万物成长壮大的作用，所以又称为“阴成形”。
->
-> 《黄帝内经讲解-阴阳的性质和作用》
-
-阴虚主要指血、津液的量低于正常范围，对应暖气里的水量不足。水量不足而火量不变的话，容易烧干，也就是阴虚火旺。这种情况会有一系列表现可供判断，比如从舌像上看，舌色暗红呈紫色等等。更多诊断方法可参考教材《概论-诊断》内容。调理方法是加水补阴了。
+阴指固液气三态的**物质**，特别是津液、血这类液体。阳指**能量**，这里指元气。阴虚主要指血、津液的量低于正常范围，对应暖气里的水量不足。水量不足而火量不变的话，容易烧干，也就是阴虚火旺。这种情况会有一系列表现可供判断，比如从舌像上看，舌色暗红呈紫色等等。更多诊断方法可参考教材《概论-诊断》内容。调理方法是加水补阴了。
 
 阳虚就是元气的量低于正常范围，对应暖气例子里的炉火不足。火不足，则水烧不热，所以屋子寒凉。其表现有怕冷，舌色淡白等。调理方法是调大阀门，让火旺起来，就是补阳了。
 
@@ -206,7 +210,7 @@
 >
 > 《方剂讲解-补益剂》
 
-因为气血比较有代表性，所以常用**“气血”一词来代表全部要素**。气血充足也叫正气足，通常标志精、神、元气、津液等其它要素也充足，反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
+因为气血比较有代表性，所以**“气血”一词常可代表全部要素**。气血充足也叫正气足，通常标志精、神、元气、津液等其它要素也充足，反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
 
 人体任何部位都涉及到能量与固、液、气三态的相互作用与转化，所以这是中医理论中人体平衡的基本原理。
 
@@ -283,7 +287,7 @@
 
 ##### 2.2.4、小结
 
-脏腑与形体是人体比较大的一对阴阳关系。脏腑为阴，形体为阳。
+从部位角度看，脏腑与形体是人体比较大的一对阴阳关系。脏腑为阴，形体为阳。
 
 脏腑为阴，负责将外界的饮食、空气转化为精气血并存储，像地，以五行划分，即木、火、土、金、水；其中脏为阴中之阴，腑为阴中之阳。因脏腑以固液态物质为根本，所以阴中之阴的脏为主。
 
