--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -10,7 +10,7 @@
 >
 > 《黄帝内经讲解-阴阳的性质和作用》
 
-又因阴阳术语在中医学中广泛应用，所以阴阳可指内外部位、功能低沉或亢奋、干扰平衡的因素性质等等，比较复杂，需要具体情况具体分析。
+又因阴阳术语在中医学中广泛应用，所以阴阳也可指内外部位、功能低沉或亢奋、干扰平衡的因素性质等等，需要具体情况具体分析。
 
 在进一步介绍人体机制之前，因中医有一些专用名词，初学者不一定了解，所以需要先对这些名称做一个初步介绍。
 
