--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -4,13 +4,13 @@
 
 而人体需要维持相对恒定的体温，形成适宜的体内环境，也有这两类平衡，其原理与自然界很相似，所以称人体是一个小自然。
 
-第一章阴阳平衡章节提到阴阳是符号，需要落实到具体事物才有意义。人体的阴与阳，大多情况下是指物质与能量。人体阴阳平衡就是人体的能量与物质像自然界的阳光与水土一样，处于一种合适的配合状态。
+人体的阴与阳，大多情况下是指物质与能量。人体阴阳平衡就是人体的能量与物质像自然界的阳光与水土一样，处于一种合适的配合状态。
 
 > “**阳**”，指物质的**能量**。阳可以把物质转化为精微之气，以促进万物的生长；转化为动力，以促进人体的生命活动，所以称为“阳化气”；“**阴**”，指**有形可见的物质**（如精、血、津液等），它可以充养形体组织，有促进万物成长壮大的作用，所以又称为“阴成形”。
 >
 > 《黄帝内经讲解-阴阳的性质和作用》
 
-又因阴阳术语在中医学中广泛应用，所以阴阳也可指内外部位、功能低沉或亢奋、干扰平衡的因素性质等等，需要具体情况具体分析。
+又因阴阳术语在中医学中广泛应用，所以阴阳也可指人体的其它方面，需要具体情况具体分析。比如阴阳有时用来代表内外部位、气态物质与固液态物质、功能的低沉或亢奋、干扰平衡的因素性质等等。
 
 在进一步介绍人体机制之前，因中医有一些专用名词，初学者不一定了解，所以需要先对这些名称做一个初步介绍。
 
