--- a/ok/qs/qs03_11.md
+++ b/ok/qs/qs03_11.md
@@ -388,7 +388,7 @@
 
 木方由黄芪、人参、肉桂、当归、白术、甘草、陈皮、五味、生姜、大枣等十味药组成。功能助阳益气，补虚理中。主治倦怠懶言，动则气喘，表热自汗。
 
-本方即补中益气汤去升麻、柴胡，加肉桂、五味子二味而成，临床运用注意加减变通，寒盛加附子；泄泻加升麻、柴胡、诃子、白蔻、木香；夏月咳去肉桂，加麦冬、五味子;冬月咳再加千姜。
+本方即补中益气汤去升麻、柴胡，加肉桂、五味子二味而成，临床运用注意加减变通，寒盛加附子；泄泻加升麻、柴胡、诃子、白蔻、木香；夏月咳去肉桂，加麦冬、五味子;冬月咳再加干姜。
 
 **32.升陷汤(《医学衷中参西录》）**
 
