--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -304,11 +304,15 @@
 
 因为大寒是一年气候最冷的时候，所以天气、地气的计算都是以此节气作为起点。
 
-中医把一年天气的能量变化分为六个阶段，为风、火（热）、暑、湿、燥、寒，为六气，每气六十天八十七刻半。一年地气的能量变化分为五个阶段，为木、火、土、金、水，为五运（又叫五行），每运七十三日零五刻。
+中医把一年天气的能量变化分为六个阶段，为风、火（热）、暑、湿、燥、寒，为六气，每气六十天八十七刻半。一年地气的能量变化分为五个阶段，为木、火、土、金、水，为五运（**又叫五行**），每运七十三日零五刻。
 
 > 鬼臾区曰：寒暑燥湿风火，天之阴阳也，三阴三阳上奉之（2）木火土金水，地之阴阳也，生长化收藏下应之
 >
 > 《素问•天元纪大论》
+
+> “五运”，亦称五行。张介宾说：“五运，即五行也。”
+>
+> 《黄帝内经讲解-五行、阴阳是自然界的根本规律》
 
 ###### 天之六气
 
