--- a/ok/gmzy/gmzy012-1.md
+++ b/ok/gmzy/gmzy012-1.md
@@ -16,7 +16,7 @@
 
 自修课11门：《中医学科学原理》、《临证程序》、《名医医案选》、《现代科技》、《历代医籍选介》、《人体解剖学》、《实用中医文献学》、《人体生理学》、《中西医结合临床成果》、《西医内科学》、《中医科研课题设计的探讨》。
 
-后来加入了《方剂讲解》课程，并调整了课程安排。重点课程变成14门：《古代汉语》、《口诀》、《中医药学概论》、《本草备要讲解》、《方剂讲解》、《黄帝内经讲解》、《伤寒论讲解》、《金匮要略讲解》、《温病条辨讲解》、《中医内科学》、《中医外科学》、《中医妇科学》、《中医儿科学》、《针灸学》。
+后来根据实践，调整了课程安排，并加入了《方剂讲解》课程。重点课程变成14门：《古代汉语》、《口诀》、《中医药学概论》、《本草备要讲解》、《方剂讲解》、《黄帝内经讲解》、《伤寒论讲解》、《金匮要略讲解》、《温病条辨讲解》、《中医内科学》、《中医外科学》、《中医妇科学》、《中医儿科学》、《针灸学》。
 
 其中《古代汉语》主要是打下古文基础，为以后阅读更多的古代医籍做准备。《口诀》是整个中医诊治内容的浓缩版，能背诵口诀是合格中医的基本功。
 
@@ -30,7 +30,7 @@
 
 2、背诵：
 
-合格的中医师应该能背诵口诀、伤寒、金匮、内经经典片段等内容。这些是中医基本功。如果只是走马观花的阅读教材，即便明白了中医道理，在真正遇到临床病人的时候，很难有思路的。如果能将口诀、伤寒等内容背诵下来，则遇到问题时可以快速联想起相关内容，进行辩证治疗。
+合格的中医师应该能背诵口诀、伤寒、金匮、内经经典片段等内容。如果只是走马观花的阅读教材，即便明白了中医道理，在真正遇到临床病人的时候，很难有思路的。如果能将口诀、伤寒等内容背诵下来，则遇到问题时可以快速联想起相关内容，进行辩证治疗。背诵是中医基本功，是在第1条明理的基础上加强临床能力，不可只背诵而不系统学习。
 
 3、古文功底：
 
