--- a/ok/bc/bc01-1.1.9.0.0.md
+++ b/ok/bc/bc01-1.1.9.0.0.md
@@ -14,7 +14,7 @@
 生用或炙用。
 
 
-本品味极辛，性温，香窜而烈。人肺、肾二经。既能外散风寒，又能内化寒饮，并有开窍、止痛之功。故外感风寒之头身疼痛，肺寒停饮，所谓心下水气，痰多喘咳等证皆用。
+本品味极辛，性温，香窜而烈。入肺、肾二经。既能外散风寒，又能内化寒饮，并有开窍、止痛之功。故外感风寒之头身疼痛，肺寒停饮，所谓心下水气，痰多喘咳等证皆用。
 
 另外，取其散性，火郁发之，以治喉痹、鼻渊、齿痛诸证。
 至《备要》云：能入肾润燥，《本草求真》谓：非是火盛水衰，
