--- a/ok/bc/bc02-0.3.1.0.0.md
+++ b/ok/bc/bc02-0.3.1.0.0.md
@@ -10,7 +10,7 @@
 
 【临证应用】甘遂泻水之力颇峻，服后可致连续泻下，使潴留之水饮排出体外。治身面浮肿，大腹肿满，皮胸胁积液，可单味应用，或配大黄、芒硝，如大陷胸汤；亦可配大戟、芫花等同用，并常以大枣煎汤送服，以保护脾胃，减少反应，如十枣汤现有用甘遂配大黄、厚朴、桃仁等同用，如甘遂通结肠，治疗现代医学之重证肠梗阻、肠腔积晚较多者，有一定疗效。
 
-本品研末水调外敷，可治痈肿疮毒。但因毒性较大，无论内服、外用、均宜审慎，敢虚弱者及孕妇忌用。
+本品研末水调外敷，可治痈肿疮毒。但因毒性较大，无论内服、外用、均宜审慎，故虚弱者及孕妇忌用。
 
 甘遂生用泻下力强，毒性也大，只可外用。经醋制后，毒性和泻下作用都相应减少，方可内服。因其有效成分不溶于水，宜入丸、散剂，不作煎剂。本药反甘草。
 
