--- a/ok/fjx/fjx16-0.5.0.0.0.md
+++ b/ok/fjx/fjx16-0.5.0.0.0.md
@@ -15,3 +15,9 @@
 本方药皆生用，使清热镇肝作用更强。 
 
 〔文献摘录〕张锡纯：“风名内中，言风自内生，非风自外来也。《内经》谓：‘诸风掉眩，皆属于肝'。盖肝为木脏,木火炽盛，亦自有风。此因肝木失和风自肝起。”（《医学衷中参西录》）
+
+------
+
+电子版注：
+
+1、原书有“使阳足则能制阳”字样，应为“使阴足则能制阳”，此为原书笔误，电子版已改。
