--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -116,33 +116,43 @@
 
 《概论》辩证章节要学习的各种辩证方法，比如八纲辩证、六经辩证、脏腑辩证、气血津液辩证等等，就是从不同角度进行部位划分后产生的，各有特点，适用于不同的情况。
 
-## 2、疾病的轻重转化
+## 2、病证的轻重转化
 
-疾病的轻重从部位分布角度看，越向外越轻，越向里越重，所以病在皮毛为最轻，在经络、筋骨次之，在脏腑为最重。
+中医的病证是指人体内环境失衡，这种失衡可以从一个部位传导到另一个部位，称为病证的转化。
 
-疾病的轻重对于某一个具体部位而言，主要观察该部位正邪力量的对比，即正虚与邪实的程度。这里正气包括气、血、阴、阳等，邪气包括六淫、瘀血、痰饮等。正虚邪实的程度越轻，疾病越轻，反之越重。
+病证的轻重从部位分布角度看，越向外越轻，越向里越重，所以病在皮毛为最轻，在经络、肉脉筋骨稍重，在腑则更重，在脏为最重。
 
-以上两者结合，疾病最轻的情况是皮毛部位有轻微的正虚邪实，最重的情况是五脏部位有严重的正虚邪实。
+病证的轻重对于某一个具体部位而言，主要观察该部位正邪力量的对比，即正虚与邪实的程度。正虚邪实的程度越轻，疾病越轻，反之越重。
 
-而疾病的转化规律就是：部位上由外入里，程度上正气减少、邪气增加为疾病加重；反之部位上由里向外，程度上正气增加、邪气减少为疾病减轻。
+以上两者结合，疾病最轻的情况是只在皮毛部位有轻微的正虚邪实，其它部位无病。健康人的一些小感冒即为此种情况，大多数情况下能自愈。最重的情况是五脏部位有严重的正虚邪实，往往预后不良。
 
-中医治病的总体规律就是：对内在部位严重的正虚邪实情况，以扶正祛邪的方法，恢复正气，减少邪气，使失衡部位由内向外转化，失衡程度由重向轻转化。也即常说的“阴证转阳证”，直至治愈。
+疾病的轻重转化规律就是：部位上由外入里，程度上正气减少、邪气增加为疾病加重；反之部位上由里向外，程度上正气增加、邪气减少为疾病减轻。
+
+疾病能够向某部位转化，必然是因为该部位的正气不足，否则不会受邪，即使受邪也会迅速排出。以后我们学习伤寒金匮的时候，无论是伤寒外感六经的传变还是内伤脏腑五行的传变，都是符合此原则的。比如金匮中说“**见肝之病，知肝传脾，当先实脾，四季脾旺不受邪，即勿补之**”，说明虽然肝病倾向于向脾传变，但若脾的正气足，是可以抵御这个过程的。伤寒论中说太阳病可以依次传阳明、少阳、太阴、少阴、厥阴，也经常有不依此次序的情况，即是因为不同人正气程度不同所致。
+
+> 传与不传与邪气的盛衰，正气的强弱，治疗与护理之是否得当有关，尤以正气的抗邪能力大小为关键。若正气虚衰，邪气则可由表传里，由浅入深，使病证渐趋沉重；若正气恢复，抗邪有力,邪气又可由里达表，由阴出阳，使病向愈。
+>
+> 《伤寒论讲解-绪论》
+
+中医治病的核心原则就是：对五脏疾病存在严重的正虚邪实的情况，以扶正祛邪的方法，恢复正气，减少邪气，使其向腑病转化，由吐或下的方式排出；或由里病向表病转化，以汗的形式排出。部位由里到外，程度由重向轻，即是常说的“阴证转阳证”，直至治愈。
 
 > 凡由阴证转化为阳证，或由阳证转化为阴证的，即是疾病性质的根本转变。这种转变，常常取决于邪正双方力量的对比。凡正气充足的，大多由阴转阳，疾病向轻浅转化，正气虚衰的，大多由阳转阴，疾病向重深发展。例如：《伤寒论》太阳篇：“病发热头痛，脉反沉，若不差，身体疼痛，当救其里，宜四逆汤。”(92条)《伤寒论》阳明篇：“脉浮而迟，表热里寒，下利清谷者，四逆汤主之。”(225条)这是阳气衰微，正气不足，或治疗失当，重伤其阳，致使阳经之病，从阴化、寒化，转为阴证的证候。
 >
 > 《黄帝内经讲解-阴阳互根互用的关系》
 
-因不同部位各有其功能，各种部位失衡导致的相关功能异常会有独特的外在表现，所以我们可以通过外在表现来判断疾病的部位及程度，并指导治疗的方向。
+一般来讲，阴证往往表现在饮食差、睡眠差、体力差等方面，阳证往往饮食、睡眠、体力尚可，有时会表现出发高热或机能亢奋等情况。所以民间以能吃、能睡、能干活作为身体健康的简单标准。
+
+要注意的是，阴证的外在表现不如阳证的表现剧烈。比如发热这个症状，中医认为发热多为正邪对抗。脏病之人正气不足，驱邪无力，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化或者里证向表证转化的时候，虽为阴证转阳证的好事，但有时病人自我感觉可能会更不舒服。这种情况即考验医生的技术水平，也考验病人的信任程度，如果不懂原理，处理不当，会重新由阳证返回阴证，功亏一篑。
+
+判断疾病的势头会向哪里转变，即为判断病势。这需要全面了解病人各部位的正气与邪气的分布情况，根据正邪力量对比及可能传变的道路，预估疾病的变化。通过各种治疗手段，提前截断疾病转重的通道，引导疾病向轻、浅发展，并随着变化调整方药治法，这个过程与打仗时根据战场势态随时调整兵力部署很相似，所以说“用药如用兵”。
+
+在病情复杂情况下，如不了解病位、病性、病势，只靠病名即开出方药，可能偶尔有效，但更多的是无效甚至产生其它不好的变化。
+
+因不同部位各有其功能，各种部位失衡导致的相关功能异常会有独特的外在表现，所以需要通过外在表现来判断疾病的部位及程度，并指导治疗的方向，这就是中医诊断的内容，见下一章。
 
 > “观其脉证，知犯何逆，随证治之”，意为诊察病人现有的脉象和证候，了解以往在治疗上发生过什么错误，然后根椐具体情况进行论治。这不仅是治疗坏病的原则，也是辨证论治精神的具体体现。
 >
 > 《伤寒论讲解-辨太阳病脉证并治上第五》
-
-要注意的是，有时重证的外在表现反而不如轻证的表现剧烈。比如发热这个症状，中医认为发热多为正邪对抗的表现。脏病之人正气不足，驱邪无力，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化或者里证向表证转化的时候，虽为阴证转阳证的好事，但病人自我感觉可能会更不舒服。这种情况即考验医生的技术水平，也考验病人的信任程度，如果不懂原理，处理不当，会重新由阳证返回阴证，功亏一篑。
-
-现在很多难治的五脏病，皆为此道理。需要根据五脏的虚实失衡进行对应的补泻调节，使其恢复平衡。五脏恢复平衡后，则功能强健，会驱病邪向外，再根据病邪所到部位在腑还是在筋脉皮肉，性质是虚是实，对应调节，随证治之，直到病邪全部排出，排出形式可能是汗、吐、大小便等几种。
-
-所以中医更强调疾病的动态变化，随时根据变化调整方药治法。在病情复杂情况下，如不详细辩证，只靠病名即开出方药，可能偶尔有效，但更多的是无效甚至产生其它变化。“用药如用兵”，即为此意。
 
 #### 附：中西医标准的一些差异
 
