--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -210,7 +210,7 @@
 >
 > 《方剂讲解-补益剂》
 
-因为气血比较有代表性，所以**“气血”一词常可代表全部要素**。气血充足也叫正气足，通常标志精、神、元气、津液等其它要素也充足，反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
+因为气血比较有代表性，气血充足通常标志精、神、元气、津液等其它要素也充足。反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
 
 人体任何部位都涉及到能量与固、液、气三态的相互作用与转化，所以这是中医理论中人体平衡的基本原理。
 
@@ -222,11 +222,11 @@
 
 如果人体天气地气受某些因素影响，比如内伤七情、外感六淫等等，则可能失衡。对于这种失衡的描述方式，如果是天气，则有中风、伤寒、中暑等，若有两种以上天气失衡，则有风湿、寒湿、风寒、湿热、暑湿等等描述方法。如果是地气，则有金气太过、火气过旺、水气不足等等描述方法。
 
-人体内到脏腑、外到皮肉筋骨，全身各处都要求精、神、元气、天气、地气都有合适的度，才能形成适宜的体内环境，各种器官组织才能正常工作。任何地方只要有一个指标失衡就会形成疾病。只要找到失衡的指标，将其调节回正常，即可治愈疾病。
+人体内到脏腑、外到皮肉筋骨，全身各处都要求精、神、元气、天气、地气都有合适的度，才能形成适宜的体内环境，各种器官组织才能正常工作。这些要素即是中医所说的正气。人体正气足代表各要素充足且配合协调，所以维持人体环境平衡、抵御失衡的能力强。邪气一词则包括所有破坏平衡的要素，包括不该有的气态物质、痰饮瘀血等液态物质、不正常的固态物质、过度的能量以及各种毒素等等。正气与邪气的关系其实就是维持平衡与破坏平衡的关系。正气的力量大于邪气的力量，人就能保持健康；反之则发病，甚至死亡。
 
 #### 2.2资源运转
 
-人体各处都需要气血，而这些资源是由饮食以及呼吸的空气转化而来，转化过程中任何一个环节出错，都会造成疾病。因此必须熟悉这些资源的产生、传递过程。
+人体各处都需要气血，而这些资源是由饮食以及呼吸的空气转化而来，转化过程中任何一个环节出错，都会导致正气不足，进而引发疾病。因此必须熟悉这些资源的产生、传递过程。
 
 首先，按照资源的传递过程划分，人体可以划分为两大部分：资源使用者和资源生产者
 
