--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -8,7 +8,7 @@
 
 人体的部位划分主要有以下几种：
 
-#### 1.1、脏腑与形体
+#### 1.1、脏腑与形体 
 
 这种划分方法是按照资源的产生与使用来划分的。
 
@@ -120,7 +120,7 @@
 
 中医的病证是指人体内环境失衡，这种失衡可以从一个部位传导到另一个部位，称为病证的转化。
 
-病证的轻重从部位分布角度看，越向外越轻，越向里越重，所以病在皮毛为最轻，在经络、肉脉筋骨稍重，在腑则更重，在脏为最重。
+病证从部位分布角度看，越向外越轻，越向里越重，所以病在皮毛为最轻，在经络、肉脉筋骨稍重，在腑则更重，在脏为最重。
 
 病证的轻重对于某一个具体部位而言，主要观察该部位正邪力量的对比，即正虚与邪实的程度。正虚邪实的程度越轻，疾病越轻，反之越重。
 
@@ -142,7 +142,7 @@
 
 一般来讲，阴证往往表现在饮食差、睡眠差、体力差等方面，阳证往往饮食、睡眠、体力尚可，有时会表现出发高热或机能亢奋等情况。所以民间以能吃、能睡、能干活作为身体健康的简单标准。
 
-要注意的是，阴证的外在表现不如阳证的表现剧烈。比如发热这个症状，中医认为发热多为正邪对抗。脏病之人正气不足，驱邪无力，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化或者里证向表证转化的时候，虽为阴证转阳证的好事，但有时病人自我感觉可能会更不舒服。这种情况即考验医生的技术水平，也考验病人的信任程度，如果不懂原理，处理不当，会重新由阳证返回阴证，功亏一篑。
+要注意的是，阴证的外在表现有时不如阳证的表现剧烈。比如发热这个症状，中医认为发热多为正邪对抗。脏病之人正气不足，驱邪无力，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化或者里证向表证转化的时候，虽为阴证转阳证的好事，但有时病人自我感觉可能会更不舒服。这种情况即考验医生的技术水平，也考验病人的信任程度，如果不懂原理，处理不当，会重新由阳证返回阴证，功亏一篑。
 
 判断疾病的势头会向哪里转变，即为判断病势。这需要全面了解病人各部位的正气与邪气的分布情况，根据正邪力量对比及可能传变的道路，预估疾病的变化。通过各种治疗手段，提前截断疾病转重的通道，引导疾病向轻、浅发展，并随着变化调整方药治法，这个过程与打仗时根据战场势态随时调整兵力部署很相似，所以说“用药如用兵”。
 
