--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -116,9 +116,9 @@
 
 《概论》辩证章节要学习的各种辩证方法，比如八纲辩证、六经辩证、脏腑辩证、气血津液辩证等等，就是从不同角度进行部位划分后产生的，各有特点，适用于不同的情况。
 
-## 2、病证的轻重转化
+## 2、病证的轻重传变
 
-中医的病证是指人体内环境失衡，这种失衡可以从一个部位传导到另一个部位，称为病证的转化。
+中医的病证是指人体内环境失衡，这种失衡可以从一个部位传导到另一个部位，称为病证的传变。
 
 病证从部位分布角度看，越向外越轻，越向里越重，所以病在皮毛为最轻，在经络、肉脉筋骨稍重，在腑则更重，在脏为最重。
 
