--- a/ok/rm/rm01.md
+++ b/ok/rm/rm01.md
@@ -104,7 +104,11 @@
 
 #### 错误的调节：
 
-一定要注意，必须分清虚实，再采取对应的补泻方法；如果判断错误，比如本来是有火的实热，误判成了虚寒，采取了补阳（增强暖气）的措施，就会火上浇油，让室温更加偏离平衡点。这会造成更严重的问题。
+一定要注意，必须分清虚实，再采取对应的补泻方法；如果判断错误，比如本来是有火的实热，误判成了虚寒，采取了补阳（增强暖气）的措施，就会火上浇油，让室温更加偏离平衡点。或者本为虚寒，误判为实热，采取泻热的方法等等，都会造成更严重的问题。
+
+> 阳明病，不能食，乃胃中虚寒所致...医者误认...手足濈然汗出，大便初硬后溏为胃家实热，妄用苦寒攻下之品，使中气更为虚寒，胃失和降，而生哕逆，此即“攻其热必哕”。...病本属胃家虚寒，攻下则犯虚虚之戒，因而有哕逆之变。
+>
+> 《伤寒论讲解-194条》
 
 所以一定不能让虚的更虚（虚虚）、实的更实（实实），不能犯虚虚实实的错误，这是中医需要遵循的最基本原则。因扶正的方法可能会有留邪的隐患，祛邪的方法往往会伤正。所以无论是扶正还是祛邪，都要注意对应的负面作用。
 
@@ -130,7 +134,7 @@
 
 很多不愿意系统学习的中医爱好者，不识药性，不懂辩证，在不能全面把握人体虚实状态的情况下，往往只看见到一方面之虚，看不到其它方面的实，进而片面用药，犯虚虚实实之戒，造成严重后果的例子非常常见。
 
-我们的老校长、中医司令吕炳奎前辈曾明确说过，反对社会上宣称可以短期速成的中医培训班。这种培训班制造了大量似懂非懂的半成品中医。这种中医治病效果先不论，因其知识不全面，常犯虚虚实实之戒，给病人造成更大的伤害，败坏了中医的声誉。大家要引以为戒！
+我们的老校长、中医司令吕炳奎前辈曾说过，反对社会上宣称可以短期速成的中医培训班。这种培训班制造了大量似懂非懂的半成品中医。这种中医治病效果先不论，因其知识不全面，常犯虚虚实实之戒，给病人造成更大的伤害，败坏了中医的声誉。大家要引以为戒！
 
 > 暮世之病也，则不然，治不本四时，不知日月，不审逆从，病形已成，乃欲微针其外，汤液治其内，**粗工凶凶，以为可攻，故病未已，新病复起**。
 >
