--- a/ok/bc/bc06-0.0.20.0.0.md
+++ b/ok/bc/bc06-0.0.20.0.0.md
@@ -4,7 +4,7 @@
 
 独活性善下行，专祛在里之伏风，多治下半身腰膝筋骨间之风湿。威灵仙性猛善走，通经络而止痛，治肢体游走性疼痛多用，并可治诸骨鲠咽。秦艽性较和平，质润不燥，是祛风湿，舒筋止痛治风湿痹痛的常用药，兼能退虚热，治疗劳热骨蒸。
 
-桑寄生既可祛风湿，又善于补肝肾，强筋骨，养血安胎，对痹痛日久，损伤肝肾，腰膝无力之证最为相宜。现代研究还有降血庄作用，临床上也用于高血压病。木瓜、五加皮偏于去湿，木瓜善祛筋络间之湿邪，舒筋活络，为治湿痹脚气，吐泻转筋的要药；五加皮强筋骨、补肝肾为强壮性祛风湿药，故多用于风湿日久，腰膝酸软的虚证。豨莶草祛风湿利关节，凡四肢麻痹，筋骨痠痛，半身不遂，风湿瘙痒等证，可单用，但作用缓慢，久服方效。
+桑寄生既可祛风湿，又善于补肝肾，强筋骨，养血安胎，对痹痛日久，损伤肝肾，腰膝无力之证最为相宜。现代研究还有降血压作用，临床上也用于高血压病。木瓜、五加皮偏于去湿，木瓜善祛筋络间之湿邪，舒筋活络，为治湿痹脚气，吐泻转筋的要药；五加皮强筋骨、补肝肾为强壮性祛风湿药，故多用于风湿日久，腰膝酸软的虚证。豨莶草祛风湿利关节，凡四肢麻痹，筋骨痠痛，半身不遂，风湿瘙痒等证，可单用，但作用缓慢，久服方效。
 
 白花蛇性善走窜，祛风力大，对风湿瘫痪，半身不遂及麻风疥癣等证，均有一定疗效。乌梢蛇甘平无毒，与白花蛇功用同而作用稍逊。蛇蜕为多种蛇类自然蜕下的皮膜，功能祛风定惊，止痒退翳，用于小儿惊风，皮肤搔痒等证。
 
