--- a/ok/bc/bc03-0.2.1.0.0.md
+++ b/ok/bc/bc03-0.2.1.0.0.md
@@ -6,7 +6,7 @@
 
 **黄芩功能清热燥湿，兼有止血安胎作用**。为唇形科多年生草本植物黄芩的根。习惯将中心空而发黑，外表呈黄棕色，颇似腐木的老根称枯芩或片芩；将中实色青，外呈黄色的细条嫩根称为子芩或条芩。切片，生用，酒炒或炒炭用。
 
-本品苦寒。苦能燥湿，寒熊清热，为清热燥湿常用之品。入肺、胆、大肠、胃、心经。其功用以泻肺经之热为主，但通过适当配伍又能清诸经之湿热，故可用于湿热诸证，如湿热黄疽，泄痢热淋，痈肿疮毒，吐衄出血等证。然苦寒之品，能伤脾胃，故凡脾胃虚寒，少食便溏者忌服。
+本品苦寒。苦能燥湿，寒能清热，为清热燥湿常用之品。入肺、胆、大肠、胃、心经。其功用以泻肺经之热为主，但通过适当配伍又能清诸经之湿热，故可用于湿热诸证，如湿热黄疽，泄痢热淋，痈肿疮毒，吐衄出血等证。然苦寒之品，能伤脾胃，故凡脾胃虚寒，少食便溏者忌服。
 
 【临证应用】   黄芩善清肺火，对邪热犯肺，身热咳嗽，痰黄粘稠之证，效果尤佳。单用即为黄芩散，或配知母、桑白皮、麦冬等，如清肺汤，治肺热咳嗽气促。本品通过配伍，应用极广，配柴胡，如小柴胡汤，以解少阳之邪，而治寒热往来；配芍药，如黄芩汤，以清大肠湿热而治泻痢腹痛；配木通、生地，如火府丹，以导小肠热而通淋；配山栀、茵陈等以治黄疽；配白蔻仁、滑石等以清热化湿而治湿温发热，胸闷，如黄芩滑石汤；配黄连、栀子、石膏等，可清气分实热，以治热病神昏及热毒疮疡。
 
