--- a/ok/fjx/fjx17-0.4.0.0.0.md
+++ b/ok/fjx/fjx17-0.4.0.0.0.md
@@ -14,6 +14,6 @@
 
 临证应用指征为：肺痈（肺脓疡）咳有微热，咳吐腥臭黄痰脓血，胸中隐痛，咳时尤甚，喘满口干，舌红苔黄腻，脉滑数。
 
-此外，对热病后，余热未清，咳嗽痰多的也可用本方治疗。其它如肺炎喘咳，支气管炎、支气管扩张、百目咳等证属肺热咳嗽者全可使用本方治疗。
+此外，对热病后，余热未清，咳嗽痰多的也可用本方治疗。其它如肺炎喘咳，支气管炎、支气管扩张、百日咳等证属肺热咳嗽者全可使用本方治疗。
 
 〔文献摘录〕“痈者壅也，犹土地之壅而不通也。是以肺痈之证，皆由痰血火邪，互结肺中，久而成脓所致。桃仁、甜瓜子，皆润降之品，一则行其瘀，一则化其浊；苇茎退热而清上，苡仁除湿而下行；方虽平淡，其散结通瘀化痰除热之力，实无所遗。以病在上焦，不欲以重浊之药重伤其下也。”（《成方便读》）
