--- a/ok/gmzy/gmzy012-1.md
+++ b/ok/gmzy/gmzy012-1.md
@@ -2,7 +2,7 @@
 
 光明中医的办学方法与一般中医药大学的教育方法有较大区别。如白永波副校长所说，光明中医不提倡那种老师上面讲，学生下面听的大课，认为这种形式学习效率低而成本高。光明中医提倡发挥学员的自主能动性，按照自学、质疑、总结的方式学习。光明中医给学员提供自学所需的辅助条件：包括教材、学习指导、答疑等，并且引导学员实践、拜师。
 
-这种方法对学员的自学能力要求较高。教材有28门课，1000多万字。这么多内容，不可能平均分配精力，必须做好学习规划，把有限的精力用在重点内容的学习上。
+这种方法对学员的自学能力要求较高。教材有28门课，1000多万字。这么多内容，不可能平均分配精力，必须做好学习规划，把有限的精力用在重点内容的学习上。 
 
 ### 课程安排：
 
@@ -63,7 +63,7 @@
 
 为了让学员用最短的时间达到中医入门的程度，网校提取了主要的7门课程放在学习平台（https://zuoye.gmzyh.com）上，供报名学员使用。这7门课为《概论》、《本草》、《方剂》、《内经》、《伤寒》、《金匮》、《温病》。这些课程包含了四大经典及其学习基础。中医无论怎样变化，都是以经典为根本的。能否认真学完经典，是业余爱好者和专业人士的分水岭。对于真心想学好中医的学员，只要在学习平台上认真完成全部作业，医理就能确保过关。在光明中医的教学要求里，这些已经是最基础、最低的了，如果这些课程都不能认真学完，想成为合格的中医恐怕很难。
 
-在学习时间方面，如果学员每天能拿出2-3个小时学习的话，大约2个月可以学完一门课程。7门课程全部学完需要一年半到两年的时间。两年时间看似慢，实则快。因为一旦学完这些课程，就真正进入中医之门，以后水平会稳步提高。如果不尊重中医前辈的教育经验，自以为是、胡乱学习，很可能一辈子在中医门外徘徊。
+在学习时间方面，如果学员每天能拿出2-3个小时学习的话，大约2个月可以学完一门课程。7门课程全部学完需要一年到两年的时间。两年时间看似慢，实则快。因为一旦学完这些课程，就系统掌握了治病所需的全部中医基础知识，可以开始实践，并且水平会稳步提高，直至达到中医大医的水平。相较于胡乱学习，一辈子也进不了中医之门的人而言，其实是相当快了。
 
 能够完成这些学习要求也不大容易，需要静下心来认真学习。我们见过很多学习者开始时候信心满满，学习一段时间后就因过程枯燥，半途而废。希望大家能认识到这一点，努力度过这个阶段。
 
