--- a/ok/fjx/fjx19-0.1.0.0.0.md
+++ b/ok/fjx/fjx19-0.1.0.0.0.md
@@ -1,6 +1,6 @@
 ## 安宫牛黄丸《温病条辨》
 
-〔组成〕牛黄一两 郁金一两 犀角一两 黄连一两 朱砂一两 梅片二钱五分 麝香二钱五分 真珠五钱 山楂一两 雄黄一两 金箔衣 黄芩一两
+〔组成〕牛黄一两 郁金一两 犀角一两 黄连一两 朱砂一两 梅片二钱五分 麝香二钱五分 真珠五钱 山栀一两 雄黄一两 金箔衣 黄芩一两
 
 上为极细末，炼老蜜为丸，每丸一钱，金箔为衣，蜡护。脉虚者，人参汤下；脉实者，银花薄荷汤下；每服一丸。兼治飞尸卒厥、五痫中恶、大人小儿痉厥之因于热者。大人病重体实者，日再服，甚至日三服；小儿服半丸，不知，再服半丸。
 
@@ -12,4 +12,10 @@
 
 若热入心包，神昏谵语，兼有腑实者，可开窍攻下并用，以安宫牛黄丸1～2丸化开调生大黄末9克先服一半，不效再服。
 
-〔文献摘录〕张秉成：“夫热邪内陷，不传阳明胃腑，则传入心包。若邪入心包，则见神昏谵语诸证，其势最虑内闭。牛黄芳香气清之品，轻灵之物，直入心包，辟邪而解秽；然温邪内陷之证，必有粘腻秽浊之气留恋于膈间，故以郁金芳香辛苦，散气行血，直达病所，为之先声；而后芩连苦寒性燥者，祛逐上焦之湿热。黑栀清上而导下，以除不尽之邪；辰砂色赤气寒，内含真汞，清心热，护心阴，安神明、镇君主、辟邪解毒。”〈《成方便读》）
+〔文献摘录〕张秉成：“夫热邪内陷，不传阳明胃腑，则传入心包。若邪入心包，则见神昏谵语诸证，其势最虑内闭。牛黄芳香气清之品，轻灵之物，直入心包，辟邪而解秽；然温邪内陷之证，必有粘腻秽浊之气留恋于膈间，故以郁金芳香辛苦，散气行血，直达病所，为之先声；而后芩连苦寒性燥者，祛逐上焦之湿热。黑栀清上而导下，以除不尽之邪；辰砂色赤气寒，内含真汞，清心热，护心阴，安神明、镇君主、辟邪解毒。”  （《成方便读》）
+
+------
+
+电子版注：
+
+1、原书中有“山楂”字样，应为“山栀”，电子版已改。
