--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -220,7 +220,7 @@
 
 从物质角度看：人的血、津液中含有空气中传入的氧等物质，此为天气化为地气。人体的营卫等气态物质是饮食而入的固液态物质转化而成，此为地气化为天气。
 
-从能量角度看，就像太阳照耀大地，形成东南西北中的五行能量差异一样，人体的形质也是按照能量差异进行五行划分。
+从能量角度看，就像太阳照耀大地，形成东南中西北的五行能量差异一样，人体的形质也是按照能量差异进行五行划分。
 
 #### 2.2、脏腑五行
 
@@ -238,15 +238,15 @@
 
 这里的每一对脏腑都有阴阳关系，比如肝为阴木，胆为阳木。这种关系是指虽然两者的能量在上一层阴阳中都处于木气这个位置，但在木气再分阴阳的情况下，两者一为阴，一为阳。两者通过经络，在能量和物质上有所互通，并形成了一种平衡。这种平衡类似天地的关系，阴中有阳、阳中有阴，即肝的正常平衡状态需要含有一部分胆的因素，胆的平衡状态需要含有肝的一部分因素。因此肝的问题除了考虑自身的失衡外，也要考虑是否由胆引起的。同样，胆的问题也要考虑肝。
 
-内经上讲“腑受脏之浊气”，从此处看，五脏运转产生的废物似乎是通过腑排出体外。有中医治疗脏器重病的思路是将病邪导入肠胃，再排出体外，此观点可供大家参考。
+内经上讲“腑受脏之浊气”，从此处看，五脏运转产生的废物应是通过腑排出体外。有中医治疗脏器重病的思路是将病邪导入肠胃，再排出体外，此观点可供大家参考。
 
-另外，经方中医在治疗疾病的时候，会将三阴病转变为三阳病，然后再将病邪从三阳排除体外。这里三阴指的就是五脏加心包以及各自的经络，三阳指的就是六腑以及各自经络。
+另外，经方中医在治疗疾病的时候，会将三阴病转变为三阳病，然后再将病邪从三阳排除体外。这里三阴指的就是五脏加心包以及各自的经络区域，三阳指的就是六腑以及各自经络区域。
 
 > 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，其气象天，故泻而不藏。此**受五藏浊气，名曰传化之府**，此不能久留，输泻者也。
 >
 > 《素问•五藏别论篇第十一》
 
-五行之间需要维持平衡，即五脏各脏的能力应保持相对均衡，这种均衡是通过五行生克、乘侮、胜复来保持的。具体见《概论》的五行章节。
+五行之间需要维持平衡，即五脏各脏的能力应保持相对均衡，这种均衡是通过五行生克、胜复来保持的。具体见《概论》的五行章节。
 
 五行的平衡非常重要，不重视这种平衡关系，很容易犯前面所说的虚虚实实之戒。如《难经》所说，若肝肾之气已绝，反而补心肺，则造成更大的不平衡，会让虚的更虚，实的更实。若病人因此而亡，是医生的责任。
 
@@ -263,6 +263,8 @@
 > “天地”，指代表天气和地气的五运六气。**六气属阳，周于天外，代表天气，五运属阴，守于地内，代表地气**。
 >
 > 《黄帝内经讲解-藏象学说-五行气运具有维持自然平衡的作用》
+
+
 
 #### 2.3、脏腑之气
 
@@ -284,7 +286,7 @@
 
 脏腑之气各有通道进入对应的经络，是经络之气的组成部分。比如心气注入手少阴心经，如果心气不足，则在心经通道上会出现能量不足的发冷症状，其它脏腑类似。
 
-因经络互相连接，所以脏腑之气进入对应经络之后，又随经络散布到全身。全身的脏腑之气作用于血而养形体，肺气侧重于养皮、心气侧重养脉、脾气侧重养肌肉、肝气侧重养筋、肾气侧重养骨。
+因经络互相连接，所以脏腑之气进入对应经络之后，又随经络散布到全身。人的五体皮肉脉筋骨由血转化而来，但血具体转化为其中哪一种又由脏腑之气控制。肺气侧重于养皮、心气侧重养脉、脾气侧重养肌肉、肝气侧重养筋、肾气侧重养骨。
 
 > **心之合脉**也，其荣色也，其主肾也（1）；**肺之合皮**也，其荣毛也，其主心也（2）；**肝之合筋**也，其荣爪也，其主肺也（3）；**脾之合肉**也，其荣唇也，其主肝也（4）；**肾之合骨**也，其荣发也，其主脾也（5）。
 >
@@ -293,6 +295,8 @@
 > 初持脉，如三菽之重，与皮毛相得者，肺部也。如六菽之重，与血脉相得者，心部也。如九菽之重，与肌肉相得者，脾部也。如十二菽之重，与筋平者，肝部也。按之至骨，举指来疾者，肾部也。故曰轻重也。
 >
 > 《难经-五难》
+
+因此，五体的状态可以反应对应脏腑的状态，五体的衰弱多因对应脏腑的衰弱。现代的很多的疾病，比如肌无力、血管瘤、骨质疏松等，从中医角度看，都要从脏腑中寻找根源。
 
 #### 2.4、五行对应
 
