--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -5,9 +5,9 @@
 
 通过第三章的学习，我们应该建立起一个人体运行的基本框架。
 
-1、功能与形体：人体的主要功能是运动、思维、感受与表达。功能正常需要头、四肢、脏腑、皮肉筋骨等形质器官能正常工作。
+1、功能与形体：人体的主要功能是运动、思维、感受与表达。功能正常需要头、四肢、身躯的皮、肉、脉、筋、骨等形体组织能正常工作。
 
-2、形体与气血：形体器官能正常工作需要其处在一个适宜的人体内部环境中。适宜的人体内部环境由气血维持，因此气血为形体之本。
+2、形体与气血：形体组织能正常工作需要其处在一个适宜的人体内部环境中。适宜的人体内部环境由气血维持，因此气血为形体之本。
 
 > **形与气相任则寿，不相任则夭（l)。皮与肉相果则寿，不相果则夭（2）。血气经络胜形则寿，不胜形则夭（3）。**...
 >
