--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -296,7 +296,7 @@
 >
 > 《难经-五难》
 
-因此，五体的状态可以反应对应脏腑的状态，五体的衰弱多因对应脏腑的衰弱。现代的很多的疾病，比如肌无力、血管瘤、骨质疏松等，从中医角度看，都要从脏腑中寻找根源。
+因此，五体的状态可以反应对应脏腑的状态，五体的衰弱多因对应脏腑的衰弱。现代的很多疾病，比如肌无力、血管瘤、骨质疏松等，从中医角度看，都要从脏腑中寻找根源。
 
 #### 2.4、五行对应
 
