--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -7,7 +7,7 @@
 
 1、功能与形体：人体的主要功能是运动、思维、感受与表达。功能正常需要头、四肢、身躯的皮、肉、脉、筋、骨等形体组织能正常工作。
 
-2、形体与气血：形体组织能正常工作需要其处在一个适宜的人体内部环境中。适宜的人体内部环境由气血维持，因此气血为形体之本。
+2、形体与气血：形体组织能正常工作需要其处在一个适宜的人体内部环境中。适宜的人体内部环境由气血等要素维持，因此气血为形体之本。
 
 > **形与气相任则寿，不相任则夭（l)。皮与肉相果则寿，不相果则夭（2）。血气经络胜形则寿，不胜形则夭（3）。**...
 >
@@ -19,31 +19,57 @@
 
 中医讨论的疾病大部分在这个环节，即气血充养形体、脏腑过程中遇到的问题。以后在学习《伤寒论》、《金匮要略》、《温病条辨》的时候会探讨人体各个部位（皮肉筋骨脉、头项胸腹肩背腰、四肢关节、脏腑经络）的正（元气、宗气、营卫气、津、血）虚和邪（风热暑湿燥寒、痰饮、淤血）实问题。了解这些问题的外在表现，及如何判断与治疗。
 
-3、气血与精：
+3、气血与脏腑经络：
 
-人体气血来自脏腑之精气。后天之精配合先天之精，共同转化产生气血，再通过经络、血脉、三焦传输到全身供脏腑、形体使用。前述气血为形体之本，而精则为气血之本。气血为精所化，精不足，则人气血阴阳皆虚，精亡则人亡。
+气血等要素由脏腑产生，由经络系统主导输送。脏腑功能强健，则可以产生足够气血。脏腑功能虚弱，则气血不足。因此脏腑为气血之本。
 
-后天之精主要来自脾胃，因此人无胃气则亡。先天之精主要存于肾，若耗尽，人亦亡。因此脾胃被称为后天之本，肾被称为先天之本。
+气血的产生过程中，五脏的作用最大，比如五脏藏神、心主血脉、肾藏精、肝藏血、肺主气等等，所以五脏功能最为关键。若五脏失衡，对人体要素的产生、体内环境的形成影响最大，内经说治五藏者半生半死。
+
+> **邪风之至，疾如风雨，故善治者治皮毛，其次治肌肤，其次治筋脉，其次治六府，其次治五藏,治五藏者，半死半生也。**
+>
+> 《素问•阴阳应象大论》
+
+腑起到辅助作用，除了消耗饮食精微外，还要接收脏在工作中产生的浊气废物，将之排出体外。
+
+> 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，其气象天，故泻而不藏。**此受五藏浊气**，名曰传化之府，此不能久留，输泻者也。
+>
+> 《素问•五藏别论篇第十一》
+
+经络、血脉、三焦作为要素传递通道，需畅通无阻，其中以经络通畅为主导。
+
+4、脏腑与精
+
+脏腑功能的强健，需要脏腑的阴阳平衡，即能量与物质配合协调。精可以补人一身之阴阳，精足则脏腑不易失衡。精不足则脏腑功能虚弱。精亡则人亡。因此脏腑所藏之精为脏腑之本。
+
+各脏腑精足才能藏精于肾，肾主生殖，因此内经以能否有子作为身体健康的重要标志。
+
+> 肾者主水，受五脏六腑之精而藏之，故五脏盛，乃能泻。
+>
+> 今五脏皆衰，筋骨解堕，天癸尽矣，故发鬓白，身体重，行步不正，而无子耳。
+>
+> 帝曰：有其年已老，而有子者，何也？
+>
+> 岐伯曰：此其天寿过度，气脉常通，而肾气有余也。此虽有子，男子不过尽八八，女子不过尽七七，而天地之精气皆竭矣。
+>
+> 帝曰：夫道者年皆百岁，能有子乎？
+>
+> 岐伯曰：夫道者能却老而全形，身年虽寿，能生子也
+>
+> 《素问-上古天真论》
+
+5、精与先后天之本
+
+脏腑所藏之精分别来自先天与后天。后天之精主要来自脾胃，人无胃气则亡。先天之精主要存于肾，若耗尽，人亦亡。因此脾胃被称为后天之本，肾被称为先天之本。
 
 > **脾脉者土也，孤藏以灌四傍者也。**
 >
 > 《素问•玉机真藏论》
 
-> **食气入胃，散精于肝，淫气于筋（1）。**
->
-> **食气入胃，浊气归心，淫精于脉，脉气流经，经气归于肺，肺朝百脉，输精于皮毛（2）。**
->
-> **毛脉合精，行气于府，府精神明，留于四藏，气归于权衡(3),权衡以平，气口成寸，以决死生(4）**
->
-> 《素问•经脉别论》
-
 > **胃者，五藏六腑之海也，水谷皆入于胃，五藏六腑皆禀气于胃（1）。五味各走其所喜，谷味酸，先走肝；谷味苦，先走心；谷味甘，先走脾；谷味辛，先走肺；谷味咸，先走肾（2）。**
 >
 > 《灵枢·五味》
 
-4、外界资源的吸收
-
-人体的形、气血与五脏所藏的后天之精皆来自对自然界天气、地气的吸收，所以呼吸与饮食都很重要。
+人体的形、气血与脏腑所藏的后天之精皆来自对自然界天气、地气的吸收，所以呼吸与饮食都很重要。
 
 > **天食人以五气，地食人以五味(1)。五气入鼻，藏于心肺，上使五色修明，音声能彰(2)。五味入口，藏于肠胃，味有所藏，以养五气(3)，气和而生，津液相成，神乃自生(4)。**
 >
@@ -61,7 +87,7 @@
 >
 > 《灵枢-平人绝谷第三十二》
 
-5、神与其它：
+6、神与其它：
 
 神总管以上全部过程，无论是高级的思维情绪还是低级的人体本能，所有平衡过程都由神来控制。若神的控制能力强，则即便精、气、血、形的数量稍少，也能配合的很好。反之，如果神的控制能力弱，则即便其它要素较多，也可能出现分配不合理的情况。
 
@@ -69,29 +95,13 @@
 >
 > 《素问·移精变气论》
 
-神与气血等要素共荣互损。从共荣角度看，神足可以合理的调配气血；气血足则可以养神。从互损角度看，如果神异常，则逆乱损耗气血；而气血失衡则神无所养，可导致神的异常。
+神与精气血等要素共荣互损。从共荣角度看，神足可以合理的调配气血；气血足则可以养神。从互损角度看，如果神异常，则逆乱损耗气血；而气血失衡则神无所养，可导致神的异常。
 
 神的异常往往表现为精神类疾病，轻则失眠、多梦、烦躁不安，重则抑郁、癫狂、健忘、神昏。因此，治疗这类疾病应从形神两方面着手。一方面是心理疏导，安抚其思维情绪；另一方面则是调理气血失衡之处，健壮形体。
 
 > 中医学形神合一理论，在认为形体对精神起决定作用的同时，强调精神意识也对形体的健康发生着重要的影响。所以志意调和，不但能使思想集中，精神专一，魂魄不致散漫无常，懊悔愤怒等异常情绪也无从产生。而且还使五脏的功能，不至因为精神情志的变化，而引起气运失常，从而使五脏功能正常，正气健旺，不会受邪气的干扰而生病。
 >
 > 《黄帝内经讲解-血气精神的重要作用》
-
-6、脏腑经络：
-
-在神的控制下，精生气血以养形体。过程中，脏腑起主要作用。五脏对几大要素的作用最大，比如五脏藏神、心主血脉、肾藏精、肝藏血、肺主气等等，所以五脏功能最为关键。若五脏失衡，对人体要素的产生、体内环境的形成影响最大，内经说治五藏者半生半死。
-
-> **邪风之至，疾如风雨，故善治者治皮毛，其次治肌肤，其次治筋脉，其次治六府，其次治五藏,治五藏者，半死半生也。**
->
-> 《素问•阴阳应象大论》
-
-腑起到辅助作用，除了吸收饮食精微外，还要接收脏在工作中产生的浊气废物，将之排出体外。
-
-> 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，其气象天，故泻而不藏。**此受五藏浊气**，名曰传化之府，此不能久留，输泻者也。
->
-> 《素问•五藏别论篇第十一》
-
-经络、血脉、三焦作为要素传递通道，需畅通无阻，其中以经络通畅为主导。
 
 人体以五脏为中心，生成并存储精、神、元气、气态物质、血、津液等要素，再以经络系统为主导，将要素传递到全身组织器官，形成适宜的体内环境，完成人体的整体功能活动。这就是中医的整体观。
 
