--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -42,11 +42,11 @@
 
 #### 3、气血总量与分布的波动变化
 
-精为气血之本。脾胃吸收的水谷精微有两个去处，一个是转化为全身的气血消耗使用，另一个是存入五脏，成为五脏所藏的精气。因此在各脏腑功能正常、脾胃吸收水谷精微的速度一定的前提下，气血总量与五脏藏精量成反比。气血总量高的时候，五脏藏精量降低。气血总量低的时候，五脏藏精量高。
+精为气血之本。脾胃吸收的水谷精微有两个去处，一个是转化为全身的气血消耗使用，另一个是存入脏腑，成为脏腑所藏的精。因此在各脏腑功能正常、脾胃吸收水谷精微的速度一定的前提下，气血总量与脏腑藏精量成反比。气血总量高的时候，脏腑藏精量降低。气血总量低的时候，脏腑藏精量高。
 
 气血的分布可分为内外两大区域。内为脏腑，外为形体组织。气血在整体均衡分布的基础上稍有波动。形体获得气血多的时候，脏腑获得的少，反之亦然。
 
-劳作时，消耗的气血总量变大，而相应五脏的藏精量减少。气血的分布为形体气血偏多而脏腑偏少，有利于形体组织健康，使人的皮肤致密、肌肉结实、血脉通畅，即为养阳；休息时，消耗的气血总量小，而五脏藏精量增加。气血的分布为形体气血偏少而脏腑偏多，有利于脏腑化物、藏精等后勤保障工作，即为养阴。
+劳作时，消耗的气血总量变大，而相应脏腑的藏精量减少。气血的分布为形体气血偏多而脏腑偏少，有利于形体组织健康，使人的皮肤致密、肌肉结实、血脉通畅，即为养阳；休息时，消耗的气血总量小，而脏腑藏精量增加。气血的分布为形体气血偏少而脏腑偏多，有利于脏腑化物、藏精等后勤保障工作，即为养阴。
 
 因此，正常人在劳作与休息之间应维持一种平衡。劳作累了要休息，休息多了要劳作，所谓一阴一阳谓之道。两者都有合适的度，需要劳作以养阳，又不能过度劳累；需要休息以养阴，又不能过度休息。
 
@@ -60,7 +60,7 @@
 >
 > 《黄帝内经讲解-阴精与阳气的主要功能和关系》
 
-<注>:"阴者，藏精而起亟也；阳者，卫外而为固也"，传统上，此处理解阴为阴精，阳为阳气，因解释不通顺，是中医的一个难点。此处的阴应理解为内在五脏，可藏精，阳理解为外在形体，可保卫脏腑，对应内经的“内为阴，外为阳”比较好。
+<注>:"阴者，藏精而起亟也；阳者，卫外而为固也"，传统上，此处理解阴为阴精，阳为阳气，因解释不通顺，是中医的一个难点。此处的阴应理解为内在脏腑，可藏精，阳理解为外在形体，可保卫脏腑，对应内经的“内为阴，外为阳”比较好。
 
 ##### 3.1、一年四季的变化
 
@@ -68,9 +68,9 @@
 
 春夏之时，自然界增长的阳气会带动人体阳气增长，并打开腠理，调动气血向肌表运动。春天，气血充实于经脉。到夏天经脉中的气血已经充满，进入络脉、皮肤。到了长夏，经脉、络脉中的气血都已充满，开始向内充实到肌肉。如能借此机会适度增加劳作，则使用很少的精就可以养阳。反之如果此时休息，休息需要阳气内藏于脏腑，与自然界调动阳气的方向相反，两者冲突，养阴效果不好。
 
-秋冬之时，自然界阳气减少，其施加于人体的阳气也减少。人的腠理开始闭合，气血趋向于脏腑。秋天，表皮气血减少。冬天，气血多藏于内部的骨髓与五脏。人应随之减少劳作，降低气血的总量消耗，会剩余更多的后天之精存入五脏，完成养阴的过程。
+秋冬之时，自然界阳气减少，其施加于人体的阳气也减少。人的腠理开始闭合，气血趋向于脏腑。秋天，表皮气血减少。冬天，气血多藏于内部的骨髓与五脏。人应随之减少劳作，降低气血的总量消耗，会剩余更多的后天之精存入脏腑，完成养阴的过程。
 
-如果冬天过度劳作，因此时获得外界阳气的帮助较少，需要消耗更多的精来转化气血。如此一来，一方面五脏藏精不够，不利于来年春夏养阳使用。另一方面也需要消耗更多的先天肾精，会缩短人的寿命。再有就是，冬天劳作出汗，寒气容易经皮肤腠理而入，可能直接发为伤寒病，或者潜伏于体内，到春夏发为其它病。
+如果冬天过度劳作，因此时获得外界阳气的帮助较少，需要消耗更多的精来转化气血。如此一来，一方面脏腑藏精不够，不利于来年春夏养阳使用。另一方面也需要消耗更多的先天肾精，会缩短人的寿命。再有就是，冬天劳作出汗，寒气容易经皮肤腠理而入，可能直接发为伤寒病，或者潜伏于体内，到春夏发为其它病。
 
 > 岐伯曰：**春**者天气始开，地气始泄，冻解冰释，水行经通，故**人气在脉**。**夏**者经满气溢，入**孙络受血**，**皮肤充实**。**长夏**者，**经络皆盛**，内**溢肌**中。**秋**者天气始收，**腠理闭塞，皮肤引急**。**冬**者，盖藏**血气在中**。内着**骨髓**，通于**五脏**。是故邪气者，常**随四时之气血而入客**也。至其变化，不可为度，然必从其经气，辟除其邪，除其邪则乱气不生。
 >
@@ -100,7 +100,7 @@
 >
 > 《灵枢•本藏》
 
-从人的起居看，春夏应晚睡早起，更多的接触太阳阳气，使体内阳气与太阳阳气同步生长，适度增加运动，让形体组织象自然界的植物生命一样生长、壮大。秋天的时候，应早睡早起，养秋收之气。冬天的时候，应早睡晚起，减少运动，降低气血消耗，使精藏于五脏。
+从人的起居看，春夏应晚睡早起，更多的接触太阳阳气，使体内阳气与太阳阳气同步生长，适度增加运动，让形体组织象自然界的植物生命一样生长、壮大。秋天的时候，应早睡早起，养秋收之气。冬天的时候，应早睡晚起，减少运动，降低气血消耗，使精藏于脏腑。
 
 从人的思想方面看，因人之气血随思想而动，所以春夏宜心情舒畅、乐观积极；秋冬则宜意志安宁，平静内敛。
 
@@ -122,7 +122,7 @@
 >
 > 《素问•脉要精微论》
 
-自然界四时阳气波动，人应顺应这种波动来养阳、养阴，就是“与万物沉浮于生长之门”。逆此波动，则形体之阳、五脏之阴都养不好，肾精消耗速度快，人易病、早衰、短寿。
+自然界四时阳气波动，人应顺应这种波动来养阳、养阴，就是“与万物沉浮于生长之门”。逆此波动，则形体之阳脏腑之阴都养不好，肾精消耗速度快，人易病、早衰、短寿。
 
 > **夫四时阴阳，万物之根本也(1)，所以圣人春夏养阳，秋冬养阴，以从其根，故与万物沉浮于生长之门(2)。逆其根，则伐其本。坏其真矣(3)。故阴阳四时者，万物之终始也，死生之本也，逆之则灾害生，从之则荷疾不起(4)。**
 >
@@ -186,7 +186,7 @@
 
 从人的一生角度看，气血与形体都有波动性。孩童形体幼小，气血也少，但两者相比，气血多于形体，所以活力旺盛、喜动。青壮年，形体长成，气血也充沛，两者配合比较合适。老年气血衰减，形体也随之衰弱，两者相比，气血少于形体需求，所以喜静。这就是人一生的形体、气血波动趋势。
 
-随年龄的增长，气血衰减的主要原因是先天之精越来越少，以肾精为代表的五脏精气也逐渐减少，供给给形体的气血能量越来越不足，排除邪气的能力就减弱，于是身体中积累的痰饮、淤血等邪气越来越多。正愈虚而邪愈实，人就逐渐衰老，疾病增多、变重。
+随年龄的增长，气血衰减的主要原因是先天之精越来越少，以肾精为代表的脏腑精气也逐渐减少，供给给形体的气血能量越来越不足，排除邪气的能力就减弱，于是身体中积累的痰饮、淤血等邪气越来越多。正愈虚而邪愈实，人就逐渐衰老，疾病增多、变重。
 
 ![img](img/%E4%BC%81%E4%B8%9A%E5%BE%AE%E4%BF%A1%E6%88%AA%E5%9B%BE_16218516681202.png)
 
