--- a/ok/wk/wk14-0.9.0.0.0.md
+++ b/ok/wk/wk14-0.9.0.0.0.md
@@ -24,7 +24,7 @@
 
 方药：五淋散合滋肾通关丸加味。
 
-若兼肺经燥热，水道不利者，加桔梗、杏仁、桑自皮等
+若兼肺经燥热，水道不利者，加桔梗、杏仁、桑白皮等
 
 2.膀胱失约证：小便不能控制、失禁或夜间遗尿或尿闭不出。精神倦怠，少气懒言，面色少华，舌淡苔白，脉弱无力。为中气下陷，膀胱失约。甚者则腰膝酸冷，面色㿠白，畏寒喜暖，脉兼沉迟，是肾阳亦衰，气化无权。
 
