--- a/ok/gl/gl06-0.1.2.0.0.md
+++ b/ok/gl/gl06-0.1.2.0.0.md
@@ -9,7 +9,7 @@
 |        |        | 病因、病机                                                   | 症状                                                         | 舌象               | 脉象           |
 | ------ | ------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------ | -------------- |
 | 表寒证 |        | 外感寒邪，腠理闭塞，卫外失司                                 | 恶寒重，发热轻，头痛，身痛，无汗                             | 苔薄白             | 浮紧           |
-| 表热证 |        | 外感寒邪，腠理开泄，卫外失司                                 | 发热重，恶寒轻，头身痛，咽喉肿痛，口微渴或少汗               | 舌边尖红，苔薄白   | 浮数           |
+| 表热证 |        | 外感热邪，腠理开泄，卫外失司                                 | 发热重，恶寒轻，头身痛，咽喉肿痛，口微渴或少汗               | 舌边尖红，苔薄白   | 浮数           |
 | 表虚证 |        | 外感风邪，开泄腠理，卫外不固，营阴外泄。或素体气虚，卫外不固，腠理疏松，易受外邪 | 自汗，恶风                                                   | 苔薄白             | 浮缓           |
 | 表实证 |        | 外为外寒侵袭，腠理闭塞，卫阳被郁                             | 无汗，恶寒，头身疼痛                                         | 苔薄白             | 浮紧           |
 | 里寒证 | 虚寒证 | 阳气不足，温化无权，寒从中生                                 | 形寒肢冷，腹痛喜按，倦怠神疲，大便溏薄，小便清长             | 舌淡，苔白滑       | 沉迟无力       |
