--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -29,7 +29,7 @@
 >
 > 《素问•阴阳应象大论》
 
-腑起到辅助作用，除了消耗饮食精微外，还要接收脏在工作中产生的浊气废物，将之排出体外。
+腑起到辅助作用，除了消化饮食外，还要接收脏在工作中产生的浊气废物，将之排出体外。
 
 > 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，其气象天，故泻而不藏。**此受五藏浊气**，名曰传化之府，此不能久留，输泻者也。
 >
