--- a/ok/ya/ya04-0.27.0.0.0.md
+++ b/ok/ya/ya04-0.27.0.0.0.md
@@ -1,6 +1,6 @@
 ## 4.27孔继菼治阴肿案
 
-妪①某氏，凌晨叩门，为其女求治，意甚仓皇。予问：病者何以不来？曰：不能移动。问：何病？病自几时？曰：下体肿疼才三日耳，而重特甚。问其详，曰：言之殊惭，亦不得不言。此女素本无病，适人②未久，三日前，自其夫家来归，赤甚欢愉，及晚，稍觉腹中热疼，次日，阴股已肿，阴中有物外撑，痛乃甚，小便不利，通宵无片刻安。至昨日，阴中之物突出三四寸，赤红粗大，上带锋刺，触之疼彻心腑，不惟小便不能涓滴，并肛门撑阻，大便亦不能下，而其物且方长未艾③。目下惟支股卧榻上，哭求速死，不知尚可治否？予曰：但痛亦不至死，小便不通，胡可④久也。吾为立二方，一以饮，一以洗，或尚可瘳，然效与不效，明日必来回信。亲朋骇曰：此为何病？君敢慨立二方。予曰：病名予所不识，然其理可意断也。经曰：诸痛疮疡，暴病暴肿，皆属于火。刘守真曰：五志过极皆为火。此必五志之火郁于内，而少年新婚，又有以触之，故其火不炎而上焚，反吸而下就。夫火性极速，其发也暴，故三日而病至此极也。且病之似此者三：曰阴挺⑤，曰阴菌⑥，曰阴痔⑦。其为证多属产后虚劳，中气下陷之故，而总不闻其肿疼，亦必不至于阻便。今新婚未产，何至于虚？平日无病，气必不陷，不作火治，此外尚有他途乎？予但为之清火，保无舛错⑧。曰：风湿中无此证乎？曰：风之为性也动，必不骤结于一处；湿之着人也迟，必不猝发于一朝。惟心包之火，可下注于膀胱，而肝家之雷火，肾家之龙火，地近壤接，声音气求，势必翕然⑨归一，并起为害，斯其所以沸腾气血，鼓荡肌肉，以至肿劲而突出也。兹用丹皮、[连翘](https://www.gmzyjc.com/read/bc/bc03-0.4.2.0.0.md)清心包之火，佐之以龙胆，臣之以知、柏，凉之以地黄，和之以芍药，而又用车前子、[牛膝](https://www.gmzyjc.com/read/bc/bc12-0.0.21.0.0.md)导引直下，火势即不清，能不衰减乎？洗法特属末事，无足道也。次早，前妪至，讯之，突出之物果消归乌有，痛亦顿止，惟阴股尚余微肿。问：药可再服否？予曰：分量过重，减半服之可也。及服半剂，病遂痊愈。
+妪①某氏，凌晨叩门，为其女求治，意甚仓皇。予问：病者何以不来？曰：不能移动。问：何病？病自几时？曰：下体肿疼才三日耳，而重特甚。问其详，曰：言之殊惭，亦不得不言。此女素本无病，适人②未久，三日前，自其夫家来归，亦甚欢愉，及晚，稍觉腹中热疼，次日，阴股已肿，阴中有物外撑，痛乃甚，小便不利，通宵无片刻安。至昨日，阴中之物突出三四寸，赤红粗大，上带锋刺，触之疼彻心腑，不惟小便不能涓滴，并肛门撑阻，大便亦不能下，而其物且方长未艾③。目下惟支股卧榻上，哭求速死，不知尚可治否？予曰：但痛亦不至死，小便不通，胡可④久也。吾为立二方，一以饮，一以洗，或尚可瘳，然效与不效，明日必来回信。亲朋骇曰：此为何病？君敢慨立二方。予曰：病名予所不识，然其理可意断也。经曰：诸痛疮疡，暴病暴肿，皆属于火。刘守真曰：五志过极皆为火。此必五志之火郁于内，而少年新婚，又有以触之，故其火不炎而上焚，反吸而下就。夫火性极速，其发也暴，故三日而病至此极也。且病之似此者三：曰阴挺⑤，曰阴菌⑥，曰阴痔⑦。其为证多属产后虚劳，中气下陷之故，而总不闻其肿疼，亦必不至于阻便。今新婚未产，何至于虚？平日无病，气必不陷，不作火治，此外尚有他途乎？予但为之清火，保无舛错⑧。曰：风湿中无此证乎？曰：风之为性也动，必不骤结于一处；湿之着人也迟，必不猝发于一朝。惟心包之火，可下注于膀胱，而肝家之雷火，肾家之龙火，地近壤接，声音气求，势必翕然⑨归一，并起为害，斯其所以沸腾气血，鼓荡肌肉，以至肿劲而突出也。兹用丹皮、[连翘](https://www.gmzyjc.com/read/bc/bc03-0.4.2.0.0.md)清心包之火，佐之以龙胆，臣之以知、柏，凉之以地黄，和之以芍药，而又用车前子、[牛膝](https://www.gmzyjc.com/read/bc/bc12-0.0.21.0.0.md)导引直下，火势即不清，能不衰减乎？洗法特属末事，无足道也。次早，前妪至，讯之，突出之物果消归乌有，痛亦顿止，惟阴股尚余微肿。问：药可再服否？予曰：分量过重，减半服之可也。及服半剂，病遂痊愈。
 
 （《孔氏医案》）
 
