--- a/ok/bc/bc16-0.2.1.0.0.md
+++ b/ok/bc/bc16-0.2.1.0.0.md
@@ -10,7 +10,7 @@
 
 《备要》言治呕逆，痞膈霍乱，小儿疳气，明目安胎等，皆取其辛散去邪而安正，然上述之证，临床较少应用。
 
-【临征应用】前胡用于肺气不降的咳嗽、痰稠，常配贝母、 杏仁、桑白皮等同用；治外感咳嗽，尤以风热郁肺所致者最佳， 常配薄荷、牛菁子、桔梗等同用，效果颇为明显，然本品泄热又有宣发之性，阴虚久咳，寒饮咳喘均不宜用。
+【临征应用】前胡用于肺气不降的咳嗽、痰稠，常配贝母、 杏仁、桑白皮等同用；治外感咳嗽，尤以风热郁肺所致者最佳， 常配薄荷、牛蒡子、桔梗等同用，效果颇为明显，然本品泄热又有宣发之性，阴虚久咳，寒饮咳喘均不宜用。
 
 前胡、柴胡，素有“二胡”之称，皆能发散风热，并常相须为用。但前胡归肺主降，以降气消痰为主要功效；柴胡入肝胆，主升，能升发肝经阳气，以泄半表半里之邪，正如《本草逢原》所说：“按二胡通为风药，但柴胡主升，前胡主降，有不同耳。
 
