--- a/ok/bc/bc16-0.2.1.0.0.md
+++ b/ok/bc/bc16-0.2.1.0.0.md
@@ -6,7 +6,7 @@
 
 **前胡以降气祛痰、宣散风热为特点**。为伞形科多年生草本植物白花前胡和紫花前胡的根。根圆色黑褐，易折断，断面黄白色， 软而气香。取根洗净晒干，切片生用。
 
-本品苦芊微寒。辛散苦降，性较平和。主归肺经。功能祛痰以除肺气之壅塞，降气可制肺气之上逆，微寒又可清热，并兼宣散肺经风热之功，且有宣不过散，降不过下的特点。故凡肺气不降，痰热咳嗽，以及风热郁肺，咳逆喘满之证，均可应用。对咳喘痰多兼表证者，尤为适宜。
+本品苦辛微寒。辛散苦降，性较平和。主归肺经。功能祛痰以除肺气之壅塞，降气可制肺气之上逆，微寒又可清热，并兼宣散肺经风热之功，且有宣不过散，降不过下的特点。故凡肺气不降，痰热咳嗽，以及风热郁肺，咳逆喘满之证，均可应用。对咳喘痰多兼表证者，尤为适宜。
 
 《备要》言治呕逆，痞膈霍乱，小儿疳气，明目安胎等，皆取其辛散去邪而安正，然上述之证，临床较少应用。
 
