--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -120,7 +120,7 @@
 
 在我们教材的定义中，广义的精，泛指一切精微物质，包括气、血、津液及水谷精微，存在于全身各处。
 
-狭义的精一种比血更精华的物质，可以理解为血的提炼浓缩品，以肾藏的精为主、五脏、全身皆有。这里主要指狭义的精。
+狭义的精一种比血更精华的物质，可以理解为血的提炼浓缩品，以肾藏的精为主、脏腑、全身皆有。这里主要指狭义的精。
 
 精可以与能量(元气)进行相互转化。在需要能量的时候精转化为能量（精化气），也可以在能量充足的时候，把能量存储起来（气化精）。所以精类似现代能源的概念。
 
