--- a/ok/bc/bc01-1.1.6.0.0.md
+++ b/ok/bc/bc01-1.1.6.0.0.md
@@ -5,7 +5,7 @@
     按古人治中风，多主外感，率用续命、愈风等汤以发
     表，用三化汤、麻仁丸以攻里。至河间出，始云中风非外来之风，良由心火
     暴甚，肾水虚衰。东垣则以为本气自病。丹溪以为湿生痰，痰生热，热生风。世人复分北方风劲质厚为真中,南方地卑质弱为类中。不思岐伯云：
-    中风大法有四：一偏枯，半身不遂也；二风痱，四肢不收也；三风癔，奄忽不知人也；四风痹，谙风类痹状也，风证尽矣。何尝有真中、类中之说乎？此证皆由气血亏虚，医者不知养血益气以固本，徒用鸟、附、羌、独以驱风。命曰虚虚，误人多矣。真中定重于类中，焉有类中即属内伤，真中单属外感乎？河间、东垣皆北人，安能尽北人而专治南病乎？
+    中风大法有四：一偏枯，半身不遂也；二风痱，四肢不收也；三风癔，奄忽不知人也；四风痹，谙风类痹状也，风证尽矣。何尝有真中、类中之说乎？此证皆由气血亏虚，医者不知养血益气以固本，徒用乌、附、羌、独以驱风。命曰虚虚，误人多矣。真中定重于类中，焉有类中即属内伤，真中单属外感乎？河间、东垣皆北人，安能尽北人而专治南病乎？
 </small>头旋
 目赤。<small>目赤要药</small>。散肌表八风之邪，利周身百节之
 痛，为却乱反正之主药。若血虚头痛偏身痛者，此属内证。二活并禁用。
@@ -26,7 +26,7 @@
 
 至于《备要》 所谓治中风不语，也指外感风邪所致，非突然昏仆、不省人事、半身不遂之中风。二者名同而实异，不可混淆。
 
-【临证应用】 羌活多用于外感风寒，恶寒发热，.头痛身痛
+【临证应用】 羌活多用于外感风寒，恶寒发热，头痛身痛
 等证，配防风、白芷、细辛等，如九味羌活汤。治风寒湿邪所致的风湿痹痛，肢体、肩背酸痛，尤以上半身疼痛更为适用。多配独活、防风等，如羌活胜湿汤。
 
 【用量用法】3 —10克，煎服。根据临床实践，本品退热之功很好，可配合清热药蒲公英、板蓝根等治风热表证，且一般在热退后不再发热。但羌活升散，温燥性强，易于伤阴耗血，凡血虚痹痛、阴虚外感，表虚多汗者均需忌用。
