--- a/ok/bc/bc01-1.1.6.0.0.md
+++ b/ok/bc/bc01-1.1.6.0.0.md
@@ -2,20 +2,12 @@
 
 〔原文〕辛苦性温，气雄而散，味薄上升。入足太阳<small>膀胱</small>。以理游风，兼入足少阴、厥阴<small> 肾、肝</small>。气分。泻肝气，搜肝风，小无不入，大无不通。治
 风湿相搏，本经头痛。<small>同川芎，治太阳、少阴头痛。凡头痛多用风药者，以巅顶之上，唯风药可到也。</small>督脉为病，脊强<sup>(1)</sup>而厥<sup>（2）</sup>，<small>督脉并太阳经</small>。刚痉柔痉，<small>脊强而厥，即痉证也。伤寒无汗为刚痉；伤风有汗为柔痉。亦有血虚发痉者。大约风证宜二活，血虚忌用。</small>中风不语， <small>
-    按古人治中风，多主外感，率用续命、愈风等汤以发
-    表，用三化汤、麻仁丸以攻里。至河间出，始云中风非外来之风，良由心火
-    暴甚，肾水虚衰。东垣则以为本气自病。丹溪以为湿生痰，痰生热，热生风。世人复分北方风劲质厚为真中,南方地卑质弱为类中。不思岐伯云：
-    中风大法有四：一偏枯，半身不遂也；二风痱，四肢不收也；三风癔，奄忽不知人也；四风痹，谙风类痹状也，风证尽矣。何尝有真中、类中之说乎？此证皆由气血亏虚，医者不知养血益气以固本，徒用乌、附、羌、独以驱风。命曰虚虚，误人多矣。真中定重于类中，焉有类中即属内伤，真中单属外感乎？河间、东垣皆北人，安能尽北人而专治南病乎？
-</small>头旋
-目赤。<small>目赤要药</small>。散肌表八风之邪，利周身百节之
-痛，为却乱反正之主药。若血虚头痛偏身痛者，此属内证。二活并禁用。
+    按古人治中风，多主外感，率用续命、愈风等汤以发表，用三化汤、麻仁丸以攻里。至河间出，始云中风非外来之风，良由心火暴甚，肾水虚衰。东垣则以为本气自病。丹溪以为湿生痰，痰生热，热生风。世人复分北方风劲质厚为真中,南方地卑质弱为类中。不思岐伯云：中风大法有四：一偏枯，半身不遂也；二风痱，四肢不收也；三风癔，奄忽不知人也；四风痹，谙风类痹状也，风证尽矣。何尝有真中、类中之说乎？此证皆由气血亏虚，医者不知养血益气以固本，徒用乌、附、羌、独以驱风。命曰虚虚，误人多矣。真中定重于类中，焉有类中即属内伤，真中单属外感乎？河间、东垣皆北人，安能尽北人而专治南病乎？
+</small>头旋目赤。<small>目赤要药</small>。散肌表八风之邪，利周身百节之痛，为却乱反正之主药。若血虚头痛偏身痛者，此属内证。二活并禁用。
 
-【讲解】（1）脊强：脊部经脉、肌肉强急，身体不能前俯的
-症状。（2）厥，指四肢寒冷；或泛指突然昏倒，不省人事的病证。此处指前者。
+【讲解】（1）脊强：脊部经脉、肌肉强急，身体不能前俯的症状。（2）厥，指四肢寒冷；或泛指突然昏倒，不省人事的病证。此处指前者。
 
-**羌活解表散寒，祛风胜湿，以治上半身痹痛尤效。**为伞形科
-多年生草本植物羌活及同属植物宽叶羌活或川羌活的根茎及根。
-采挖出晒干，切片生用。
+**羌活解表散寒，祛风胜湿，以治上半身痹痛尤效。**为伞形科多年生草本植物羌活及同属植物宽叶羌活或川羌活的根茎及根。采挖出晒干，切片生用。
 
 本品辛苦温，气雄而散，上升发表作用较强。其祛风湿之力胜于防风。归膀胱经，主散肌表风寒，治风寒表证，或挟湿邪的头痛，身痛效佳;又入肝、肾经，善祛筋骨间风湿而止痛。故亦为蠲痹止痛常用之品，対上半身肌肉风湿痛尤为适宜。	
 
@@ -26,7 +18,6 @@
 
 至于《备要》 所谓治中风不语，也指外感风邪所致，非突然昏仆、不省人事、半身不遂之中风。二者名同而实异，不可混淆。
 
-【临证应用】 羌活多用于外感风寒，恶寒发热，头痛身痛
-等证，配防风、白芷、细辛等，如九味羌活汤。治风寒湿邪所致的风湿痹痛，肢体、肩背酸痛，尤以上半身疼痛更为适用。多配独活、防风等，如羌活胜湿汤。
+【临证应用】 羌活多用于外感风寒，恶寒发热，头痛身痛等证，配防风、白芷、细辛等，如九味羌活汤。治风寒湿邪所致的风湿痹痛，肢体、肩背酸痛，尤以上半身疼痛更为适用。多配独活、防风等，如羌活胜湿汤。
 
 【用量用法】3 —10克，煎服。根据临床实践，本品退热之功很好，可配合清热药蒲公英、板蓝根等治风热表证，且一般在热退后不再发热。但羌活升散，温燥性强，易于伤阴耗血，凡血虚痹痛、阴虚外感，表虚多汗者均需忌用。
