--- a/ok/bc/bc01-1.1.6.0.0.md
+++ b/ok/bc/bc01-1.1.6.0.0.md
@@ -12,8 +12,7 @@
 本品辛苦温，气雄而散，上升发表作用较强。其祛风湿之力胜于防风。归膀胱经，主散肌表风寒，治风寒表证，或挟湿邪的头痛，身痛效佳;又入肝、肾经，善祛筋骨间风湿而止痛。故亦为蠲痹止痛常用之品，対上半身肌肉风湿痛尤为适宜。	
 
 羌活发散风寒、止痛之效均较强，故曰：小无不入，大无不通。《汤液本草》曰：治足太阳风湿相搏，头痛肢节痛，一身尽痛者，非此不能除。《珍珠囊》谓：去诸骨节痛。《备要》曰：
-督脉为病，脊强而厥。因足太阳之脉行于身背，与督脉并行，风寒湿邪干于太阳，故见脊强而厥，发为刚痉、柔痉。上引诸家本草所述，旨在说明羌活能散肌表八风之邪，利周身百节之痛的特
-点。
+督脉为病，脊强而厥。因足太阳之脉行于身背，与督脉并行，风寒湿邪干于太阳，故见脊强而厥，发为刚痉、柔痉。上引诸家本草所述，旨在说明羌活能散肌表八风之邪，利周身百节之痛的特点。
 
 
 至于《备要》 所谓治中风不语，也指外感风邪所致，非突然昏仆、不省人事、半身不遂之中风。二者名同而实异，不可混淆。
